src/snapshots/lakonik__parser__tests__parse_statement_snapshot@alice42_jump.snap
---
source: src/parser.rs
expression: sentence
---
type: sentence
range:
  start:
    line: 1
    offset: 0
  end:
    line: 1
    offset: 12
vocative:
  type: vocative
  range:
    start:
      line: 1
      offset: 0
    end:
      line: 1
      offset: 12
  name: alice42
verb:
  type: verb
  range:
    start:
      line: 1
      offset: 8
    end:
      line: 1
      offset: 12
  name: jump
parts: []
