src/snapshots/lakonik__parser__tests__parse_statement_snapshot@bob123_fly.snap
---
source: src/parser.rs
expression: sentence
---
type: sentence
range:
  start:
    line: 1
    offset: 0
  end:
    line: 1
    offset: 10
vocative:
  type: vocative
  range:
    start:
      line: 1
      offset: 0
    end:
      line: 1
      offset: 10
  name: bob123
verb:
  type: verb
  range:
    start:
      line: 1
      offset: 7
    end:
      line: 1
      offset: 10
  name: fly
parts: []
