src/snapshots/lakonik__parser__tests__parse_statement_snapshot@john-doe123_run-fast.snap
---
source: src/parser.rs
expression: sentence
---
type: sentence
range:
  start:
    line: 1
    offset: 0
  end:
    line: 1
    offset: 20
vocative:
  type: vocative
  range:
    start:
      line: 1
      offset: 0
    end:
      line: 1
      offset: 20
  name: john-doe123
verb:
  type: verb
  range:
    start:
      line: 1
      offset: 12
    end:
      line: 1
      offset: 20
  name: run-fast
parts: []
