src/snapshots/lakonik__parser__tests__parse_statement_snapshot@qwen3_create_$(tree_.).snap
---
source: src/parser.rs
expression: sentence
---
type: sentence
range:
  start:
    line: 1
    offset: 0
  end:
    line: 1
    offset: 22
vocative:
  type: vocative
  range:
    start:
      line: 1
      offset: 0
    end:
      line: 1
      offset: 22
  name: qwen3
verb:
  type: verb
  range:
    start:
      line: 1
      offset: 6
    end:
      line: 1
      offset: 22
  name: create
parts:
  - InlineShell:
      type: inline_shell
      range:
        start:
          line: 1
          offset: 13
        end:
          line: 1
          offset: 22
      code: tree .
