src/snapshots/lakonik__parser__tests__parse_statement_snapshot@qwen3_delete_bar_@hello.txt.snap
---
source: src/parser.rs
expression: sentence
---
type: sentence
range:
  start:
    line: 1
    offset: 0
  end:
    line: 1
    offset: 27
vocative:
  type: vocative
  range:
    start:
      line: 1
      offset: 0
    end:
      line: 1
      offset: 27
  name: qwen3
verb:
  type: verb
  range:
    start:
      line: 1
      offset: 6
    end:
      line: 1
      offset: 27
  name: delete
parts:
  - Freeform:
      type: freeform
      range:
        start:
          line: 1
          offset: 13
        end:
          line: 1
          offset: 27
      text: bar
  - FilePath:
      type: filepath
      range:
        start:
          line: 1
          offset: 17
        end:
          line: 1
          offset: 27
      path: hello.txt
